# data622

./: .gitattributes  .gitignore  BEST_MODEL_SECTION_SUGGESTIONS.md  CHALLENGES_AND_SOLUTIONS.md  DATA_CLEANING_SUMMARY.md  ML_PIPELINE_IMPROVEMENTS.md  MODEL_IMPROVEMENT_GUIDE.md  README.md  REGULARIZATION_RESULTS.md  RESULTS_SECTION_SUGGESTIONS.md  Untitled2.ipynb  YEAR_RELATIVE_FEATURES_SUMMARY.md  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/processed/: nyc_annual_salary_employees_payBasis_perAnuum.csv  nyc_payroll_anomalies_final.csv  nyc_payroll_anomalies_with_notes.csv  nyc_payroll_combined_all_2015_2024.csv  nyc_payroll_hourly_employees_2015_2024.csv  nyc_payroll_salaried_doe_2015_2024.csv  reference_table.csv  tenure_master_for_streamlit.csv  test_set.csv  title_category_map.json  train_set.csv  valid_set.csv  yoy_summary.csv
final_project/: Citywide_Payroll_Data__Fiscal_Year__Data_Dictionary.xlsx
models/: salary_model_gradient_boosting.pkl  salary_model_linear.pkl  salary_model_linear_regression.pkl  salary_model_random_forest.pkl  salary_model_ridge_regression.pkl  salary_model_xgb.pkl
notebooks/: Anomaly_Detection.ipynb  Data cleaning  EDA  Tenure_analysis.ipynb
notebooks/exploratory/: EDA.ipynb  eda_data622.ipynb  modeling_dataset_check.ipynb
project_proposal/: Data 622 - Project Proposal.docx
references/: git-branching-strategies.md  team-guide.md
scripts/: build_modeling_dataset.ipynb  generate_dummy_data.py  generate_reference_files.py  generate_splits.py  run_eda.py  update.sh
src/data622/: app.py  (+8 more)
(+6 files in other folders)
