[project]
name = "data622"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas<3.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shiny>=1.5.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.55.0",
    "pydeck>=0.9.0",
    "altair>=5.0.0",
]

[tool.ruff.lint]
ignore = ["F401"]  # Ignore unused imports
